- added atlantide.it domain to rin.lua (Thanks to Ivan Piasini)
- added support for foo@plugin.lua when plugin.lua is in the UNOFFICIAL
directory
- added patch from Rostislav Kandilarov to create /dev/random and /dev/urandom
in the chroot jail
- fixed the manpage for the command line option -x
- fixed the manual for the command line option -x
- changed the command line description for -x
- fixed plugin2xml.lua to generate XML also for modules
- fixed luay.c, luay_callv used not to set the returned values
- fixed homepage_updater to handle modules (and not only plugins)
- added MODULE_* metadatas to every module
18/06/2006 0.0.99
- es, fr: more work on patches (gareuselesinge)
- juno.lua: Fixed an issue where the server url once logged in wasn't being correctly identified. (russell822)
- mailcom.lua: Added handling for mail.org (russell822)
- mailcom.lua: Added support for mexico.com (russell822)
- hotmail.lua: Reinstated the 0.1.5f functionality, plus added support in the live accounts for the folder name of Junk to always resolve to the junk e-mail folder. (russell822)
- hotmail.lua: If the folder was set to Live mail's junk folder, mail wasn't being picked up. (russell822)
- tin.lua: remove trailing spaces and correctly show special characters from plaintext messages. (alessiofender)
- hotmail.lua: Merged the MSN fix into the hotmail fix. (russell822)
- gmail.lua: A fix for the login change by Gmail. Submitted by Jbobowski, (russell822)
- libero.lua: Updated webmail server addresses (alessiofender)
- yahoo.lua: Fix for a nil pointer problem with the beta of yahoo. (russell822)
- libero.lua: Updated the version number (alessiofender)
- hotmail.lua: Reverting Hotmail back to 0.1.5e so that it works with msn and live hotmail. (russell822)
- tin.lua: fixed encoding problems (alessiofender)
- yahoo.lua: Previous checkin was broken. (russell822)
- mailcom.lua: The modification forces the session to logout and clear every 4 hours. (russell822)