@@ -1,4 +1,5 @@
-- added atlantide.it domain to rin.lua (Thanks to Ivan Piasini)
+- libero.lua: mlex to identify the message list enhanced once again
+- added atlantide.it domain to tin.lua (Thanks to Ivan Piasini)
 - added support for foo@plugin.lua when plugin.lua is in the UNOFFICIAL
 directory
 - added patch from Rostislav Kandilarov to create /dev/random and /dev/urandom
